<?xml version="1.0"?>
<package format="2">
  <name>nav2_smac_planner</name>
  <version>1.2.0</version>
  <description>Smac global planning plugin: A*, Hybrid-A*, State Lattice</description>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>visualization_msgs</depend>
  <depend>mbf_costmap_core</depend>
  <depend>mbf_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>costmap_2d</depend>
  <depend>base_local_planner</depend>
  <depend>pluginlib</depend>
  <depend>eigen_conversions</depend>
  <depend>ompl</depend>
  <depend>angles</depend>
  <depend>nlohmann_json</depend>

  <test_depend>catkin_lint</test_depend>
  <test_depend>catkin</test_depend>
  <test_depend>gtest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <build_type>catkin</build_type>
    <mbf_costmap_core plugin="${prefix}/smac_plugin_hybrid.xml"/>
    <mbf_costmap_core plugin="${prefix}/smac_plugin_2d.xml"/>
    <mbf_costmap_core plugin="${prefix}/smac_plugin_lattice.xml"/>
  </export>
</package>
